[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
chrono = "0.4.19"
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.21"
serde = "1.0.137"
sqlx = {version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "decimal", "chrono", "uuid"]}
tokio = {version = "1", features = ["full"]}
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
