[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
actix-web = "4.0.1"
chrono = "0.4.19"
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.21"
mime = "0.3.16"
sea-orm = {version = "^0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = "1.19.0"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
