[package]
edition = "2021"
name = "server"
version = "0.1.0"

[dependencies]
actix-web = "4.1.0"
chrono = "0.4.20"
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.21"
mime = "0.3.16"
sea-orm = { version = "0.9.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = "1.0.142"
serde_json = "1.0.83"
sqlx = { version = "0.6.1", features = ["all-types", "decimal"] }
thiserror = "1.0.32"
tokio = "1.20.1"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
