[package]
edition = "2021"
name = "service"
version = "0.1.0"

[dependencies]
async-recursion = "1.0.0"
async-trait = "0.1.53"
chrono = "0.4.19"
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.21"
lazy_static = "1.4.0"
near-jsonrpc-client = "0.3.0"
near-jsonrpc-primitives = "0.12.0"
near-primitives = "0.12.0"
num-traits = "0.2.15"
serde = "1.0.137"
sqlx = {version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "decimal", "chrono", "uuid"]}
tap = "1.0.1"
thiserror = "1.0.31"
tokio = {version = "1", features = ["full"]}
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[features]
